--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-share": "^4.4.1",
     "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
