--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-share": "^4.4.1",
+    "react-snowfall": "^1.2.1",
     "react-toastify": "^9.1.1",
     "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
