--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://brianlupu93.github.io/official-website",
+  "homepage": "https://brianlupu93.github.io/website",
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
